--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,14 @@ on:
         branches: [ main ]
     
 jobs:
-    deploy:
-        runs-on: self-hosted
-    
-    strategy: 
-        matrix:
-            node-version: [20.x]
-            
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-            node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm run build --if-present
+    build:
+        runs-on: ubuntu-latest
+        name: Node sample
+        steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-node@v4
+          with:
+            node-version: '20.x'
+            check-latest: true
+        - run: npm ci
+        - run: npm test
