--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
     
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: self-hosted
         name: Node sample
         steps:
         - uses: actions/checkout@v4
@@ -15,4 +15,3 @@ jobs:
             node-version: '20.x'
             check-latest: true
         - run: npm i
-        - run: npm run start
