--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "psi": "^4.1.0"
   }
 }
